# pytorch-docs

./: .gitignore  Chapter02.1.ipynb  Chapter02.ipynb  Chapter02.py  Chapter03.ipynb  Chapter03.py  Chapter04.ipynb  Chapter04.py  Chapter05.ipynb  Chapter05.py  Chapter06.ipynb  Chapter06.py  Chapter07.ipynb  Chapter07.py  Chapter08.ipynb  Chapter08.py  Chapter09.py  Chapter10.py  Chapter11.py  README.md  Word2Vec.ipynb  fix_alexnet_loading.py  install_certificates.py  model_checkpoint.pth  pyproject.toml
runs/classy_20240802145443/: events.out.tfevents.1722590683.CSGBTPLT767.35038.0
runs/classy_20240802145443/loss_training/: events.out.tfevents.1722590693.CSGBTPLT767.35038.1
runs/classy_20240802145443/loss_validation/: events.out.tfevents.1722590693.CSGBTPLT767.35038.2
runs/classy_20240802145720/: events.out.tfevents.1722590840.CSGBTPLT767.35038.3
runs/classy_20240802145720/loss_training/: events.out.tfevents.1722590840.CSGBTPLT767.35038.4
runs/classy_20240802145720/loss_validation/: events.out.tfevents.1722590840.CSGBTPLT767.35038.5
runs/classy_20240802145752/: events.out.tfevents.1722590872.CSGBTPLT767.35038.6
runs/classy_20240802145752/loss_training/: events.out.tfevents.1722590879.CSGBTPLT767.35038.7
runs/classy_20240802145752/loss_validation/: events.out.tfevents.1722590879.CSGBTPLT767.35038.8
runs/classy_20240802145901/: events.out.tfevents.1722590941.CSGBTPLT767.35038.9
runs/classy_20240802145901/loss_training/: events.out.tfevents.1722590948.CSGBTPLT767.35038.10
(+1 files in other folders)
