[project]
name = "pytorch-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-server-proxy>=4.4.0",
    "jupyterlab>=4.3.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.1",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torchtext>=0.18.0",
    "torchvision>=0.21.0",
    "torchviz>=0.0.3",
]
